Home Section Done for The Project

--- a/src/style.css
+++ b/src/style.css
@@ -3,36 +3,41 @@
     margin: 0;
 }
 :root{
-    --background-color: #e7e5e4;
+    --background-color: #f1c494;
     --color-one: #3a3939;
 }
 body{
+    background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='50px' width='120px'><text x='0' y='15' fill='grey' font-size='20'>ラーメン丼</text></svg>");
     background-color: var(--background-color);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 nav{
     padding: 10px 0;
 }
-.content{
+#content{
+    width: 80%;
+    margin: 0 auto;
     padding: 10px;
 }
+
 .logo-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    font-size: 1em;
 }
 h1{
-    color: #1d1c1c;
+    color: #1c1b1b;
 }
 .svg{
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
 }
 .links-container{
     display: flex;
-    background-color: #222222d2;
-    width: 40%;
+    background-color: #222222;
+    width: 35%;
     margin: 0 auto;
     border-radius: 10px;
     padding: 12px;
@@ -42,15 +47,40 @@ h1{
 }
 button{
     width: 18%;
-    padding: 20px;
-    background-color: #2b2b2bcc;
+    padding: 10px;
+    background-color: #222;
     border: none;
     color: #e4e4e4;
     border-radius: 10px;
-    border: 1px solid #525151d2;
-
+    border: 1px solid #343333;
+}
+button:hover{
+    border: 1px solid #6a6a6a;
 }
 .contact-btn{
     background-color: #fee66c;
-    color: #222;
+    color: #000000;
 }
+.contact-btn:hover{
+    background-color: #dbc65b;
+}
+
+/*home styling*/
+.home-icon{
+    width: 250px;
+    height: 300px;
+}
+.home-container{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--background-color);
+    border-radius: 10px;
+}
+.home-info{
+    font-size: 2.5rem;
+}
+
+/*menu container*/
+
