--- a/src/style.css
+++ b/src/style.css
@@ -41,9 +41,10 @@ h1{
     height: 40px;
 }
 .links-container{
+    position: sticky;
     display: flex;
     background-color: #222222;
-    width: 35%;
+    width: 80%;
     margin: 0 auto;
     border-radius: 10px;
     padding: 12px;
@@ -83,6 +84,8 @@ button:hover{
     align-items: center;
     background-color: #ffe2c2;
     border-radius: 10px;
+    border: 1px solid grey;
+    padding: 10px;
 }
 .home-info{
     font-size: 2.5rem;
@@ -104,10 +107,10 @@ button:hover{
 .noodles-container,
 .sushi-container,
 .yakitori-container{
-    background-color: #f1c494;
+    background-color: #ffe2c2;
     padding: 50px;
     border-radius: 10px;
-    border: 1px solid black;
+    border: 1px solid grey;
 }
 .egg-image,
 .gyoza-image,
@@ -117,4 +120,19 @@ button:hover{
 .yakitori-image{
     width: 80px;
     height: 80px;
+}
+
+/*Media query for responsiveness on different devices*/
+@media (max-width:978px) {
+    .home-info{font-size: 1.5rem;}
+}
+@media(max-width:715px){
+    .home-container{
+        display: block;
+    }
+}
+@media(max-width:450px){
+    .links-container{
+        width: 95%;
+    }
 }
